force-app/main/default/objects/Integration_Errors__c/Integration_Errors__c.object-meta.xml
<CustomObject>
    <description>Pentaho integration errors put into Salesforce so they can be checked and managed easily</description>
    <label>Integration Errors</label>
    <nameField>
        <displayFormat>Error-{0}</displayFormat>
        <label>Integration Errors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Error</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>