force-app/main/default/objects/Integration_Errors__c/fields/Inbound_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Outbound__c</fullName>
    <label>Inbound \ Outbound</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>