force-app/main/default/objects/Integration_Errors__c/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <description>Object/Area that Salesforce is trying to update</description>
    <label>Salesforce Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>ActivitySheet</fullName>
            </value>
            <value>
                <fullName>ConsultantBookings</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>DBProcedure Account</fullName>
            </value>
            <value>
                <fullName>Entitlement</fullName>
            </value>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Poap</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>