force-app/main/default/objects/Integration_Errors__c/fields/Transformation_Name__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Name__c</fullName>
    <description>Name of the Transformation that Spoon is running when the error was created.</description>
    <label>Transformation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>