force-app/main/default/objects/Integration_Errors__c/listViews/Account_Upload.listView-meta.xml
<ListView>
    <fullName>Account_Upload</fullName>
    <columns>NAME</columns>
    <columns>Error_Description__c</columns>
    <columns>Salesforce_Object__c</columns>
    <columns>Transformation_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Object__c</field>
        <operation>equals</operation>
        <value>Account</value>
    </filters>
    <label>Account Upload</label>
</ListView>