force-app/main/default/objects/Integration_Errors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Integration_ID__c</columns>
    <columns>Error_Description__c</columns>
    <columns>Inbound_Outbound__c</columns>
    <columns>Salesforce_Object__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>