force-app/main/default/objects/Integration_Errors__c/listViews/Projects.listView-meta.xml
<ListView>
    <fullName>Projects</fullName>
    <columns>Integration_ID__c</columns>
    <columns>Error_Description__c</columns>
    <columns>Inbound_Outbound__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Object__c</field>
        <operation>equals</operation>
        <value>ConsultantBookings,Poap</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Projects</label>
</ListView>